--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,7 @@
 body {
   min-width: 320px;
   background: linear-gradient(to bottom, #1C2A34, #111A20);
+  overflow-x: hidden;
 }
 
 li:last-child {
@@ -98,4 +99,19 @@ span {
   border-radius: 6px;
   padding: 36px;
   border-left: 7px solid #81F59B;
+}
+
+main {
+  max-width: 768px;
+}
+
+.form-signin {
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.95);
+  border-radius: 6px;
+  max-width: 500px;
+  margin: 96px 0 ;
+}
+
+.label {
+  color: #81F59B;
 }
