--- a/src/index.css
+++ b/src/index.css
@@ -115,3 +115,10 @@ main {
 .label {
   color: #81F59B;
 }
+
+.dropdown {
+  position: absolute;
+  top: calc(100% + 4px);
+  background-color: rgba(255, 255, 255, 0.7);
+  width: 70px;
+}
