--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,8 @@ body {
   min-width: 320px;
   background: linear-gradient(to bottom, #1C2A34, #111A20);
   overflow-x: hidden;
+  height: 100%;
+
 }
 
 li:last-child {
@@ -109,7 +111,7 @@ main {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.95);
   border-radius: 6px;
   max-width: 500px;
-  margin: 96px 0 ;
+  margin: 96px 0;
 }
 
 .label {
@@ -125,4 +127,18 @@ main {
 
 .li-last-child:last-child {
   padding: 0;
+}
+
+.modal-wrapper {
+  background-color: #243B4A;
+}
+
+.modal-body {
+  width: 600px;
+}
+
+@media screen and (max-width: 767px) {
+  .madal-bdy {
+    max-width: 500px;
+  }
 }
