--- a/src/index.css
+++ b/src/index.css
@@ -81,7 +81,7 @@ span {
 
 .button {
   max-width: 200px;
-  height: 35px;
+  min-height: 38px;
   border: 2px solid rgba(124, 201, 255, 0.41);
   border-radius: 6px;
   font-size: 18px;
