--- a/src/index.css
+++ b/src/index.css
@@ -56,11 +56,15 @@ li:last-child {
   transform: translateX(0);
 }
 
+.menu-link:hover {
+  color:#1C2C35;
+  
+}
+
 h1 {
   font-weight: 700;
   font-size: 48px;
   line-height: 142%;
-  text-shadow: 0px 0px 76px rgba(188, 251, 195, 0.3);
   background: linear-gradient(180deg, #B0FBBC 0%, #82F9A1 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -77,6 +81,11 @@ span {
   color: #5E8CA7;
   font-size: 12px;
   line-height: 16px;
+}
+
+a:hover {
+  color: #82F9A1;
+  transition: color 0.5s ease-out;
 }
 
 .button {
