--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;500;700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -38,22 +39,22 @@ li:last-child {
 
 .menu {
   position: absolute;
-  max-width: 200px;
-  max-height: 200px;
-  top: calc(100% + 8px);
-  right: 0;
+  min-width: 200px;
+  top: 100px;
+  right: 16px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   border-radius: 8px;
-  box-shadow: 0 1px 1px 0 rgba(255, 255, 255, 0.7);
+  box-shadow: 0 1px 1px 1px rgba(255, 255, 255, 0.7);
   transition: all 0.3s;
-  transform: translateX(150%);
-  z-index: 50;
+  opacity: 0;
+  z-index: 999;
+  background-color: #1C2A34;
 }
 
 .menu-active {
-  transform: translateX(0);
+  opacity: 1;
 }
 
 .menu-link:hover {
